# oscopy

./: README.md  pyproject.toml
src/oscopy/: __init__.py  cli.py
