[project]
name = "oscopy"
version = "0.1.0"
description = "Python script to copy from STD to your clipboard with OSC 52."
readme = "README.md"
authors = [
    { name = "hammerill", email = "kyrylo@hammerill.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
oscopy = "oscopy.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
